--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ colorama==0.4.6
 cryptography==46.0.5
 distro==1.9.0
 durationpy==0.10
+fastapi>=0.115.0
 filelock==3.20.3
 flatbuffers==25.12.19
 fsspec==2026.2.0
@@ -96,8 +97,10 @@ typer-slim==0.21.2
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.6.3
+python-multipart>=0.0.9
 uvicorn==0.40.0
 watchfiles==1.1.1
+watchdog==6.0.0
 websocket-client==1.9.0
 websockets==16.0
 zipp==3.23.0
